<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_height="wrap_content" android:text="@string/setupt1" android:layout_width="wrap_content" android:id="@+id/TextView01"></TextView>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/dlButton" android:text="@string/startdl" android:layout_gravity="center_horizontal"></Button>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/dlStatus" android:text="@string/dlnotrunning" android:layout_gravity="center_horizontal"></TextView>
</LinearLayout>
