<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of Network Spoofer for Android.
 * Network Spoofer - change and mess with webpages and the internet on
 * other people's computers
 * Copyright (C) 2014 Will Shackleton <will@digitalsquid.co.uk>
 *
 * Network Spoofer is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Network Spoofer is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Network Spoofer, in the file COPYING.
 * If not, see <http://www.gnu.org/licenses/>.
 * -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent" android:layout_height="wrap_content">
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:padding="5dip" android:layout_height="wrap_content">
        <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow1" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/deviceIp" android:id="@+id/myIp"></TextView>
            <EditText android:layout_height="wrap_content" android:id="@+id/myIpText" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/blank"></EditText>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:id="@+id/TableRow01" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/routerIp" android:text="@string/routerIp"></TextView>
            <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/blank" android:id="@+id/routerIpText"></EditText>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:id="@+id/TableRow02" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/myIf" android:text="@string/deviceIf"></TextView>
            <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/blank" android:id="@+id/myIfText"></EditText>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:id="@+id/TableRow03" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/subnetMask" android:text="@string/subnet"></TextView>
            <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/subnetMaskText"></EditText>
        </TableRow>
    </TableLayout>
</LinearLayout>
